--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,22 @@
 <% include partials/header %>
 
-    <h1>Login</h1>
+
+    <h1 id="login">Login to Crowler</h1>
+    <div class="row">
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/login" method="post">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-light btn-block">Login</button>
+                </div>
+            </form>
+            <a href="/">Go Back</a>
+        </div>
+    </div>
 
     <% include partials/footer %>
