passport authentication added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <h1 id="login">Login to Crowler</h1>
     <div class="row">
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/login" method="post">
+            <form action="/login" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
