--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,19 @@
 
 <body>
 
+    <div class="container">
+        <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+            <% } %>
+                <% if(success && success.length > 0){ %>
+                    <div class="alert alert-success" role="alert">
+                        <%= success %>
+                    </div>
+                    <% } %>
+    </div>
+
     <div id="landing-header">
         <h1>Welcome to Price Monitor!</h1>
         <a href="/register" class="btn btn-lg btn-light">Sign Up</a>
