--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,18 @@
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
                 <div class="form-group">
+                    <input type="text" value="B" name="B" disabled>
+                </div>
+                <div class="form-group">
+                    <input type="hidden" value="C" name="C">
+                </div>
+                <div class="form-group">
+                    <input type="text" value="D" name="D" hidden>
+                </div>
+                <div class="form-group">
+                    <input type="text" value="E" name="E" style="display:none">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-light btn-block">Sign up!</button>
                 </div>
             </form>
